se cambia el texto en mis trabajos y se agregar archivos img

--- a/index.html
+++ b/index.html
@@ -111,12 +111,10 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">GUNDAM STRIKE NOIR HG</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            La primera maqueta que arme en mi vida, no sabia muy bien como empezar asi que no use herramientas y en su lugar use un cortauñas.
+                            Me arrepiento hasta el dia de hoy, tanto que cuando vi la oportunidad compre uno nuevo mas de 10 años despues.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -128,12 +126,10 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">MILLENIUM FALCOM HG</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            Trabajo realizado a pedido por un cliente en un local donde trabajaba ya que el no se sentia con la capacidad para realizarlo bien.
+                            Bonito modelo con partes muy pequeñas y fragiles que suponian un reto a la paciencia.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -145,12 +141,9 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">BEARGGUY F HG</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Robot con apariencia de oso con su hijo me gustan mucho como se ve, tanto que me empeñe en buscar y armar otros modelos con tal de hacer una familia.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
