se modifica texto de contacto y footer

--- a/index.html
+++ b/index.html
@@ -161,11 +161,7 @@
 
         <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+        <p class="text-center my-4 d-none d-md-block">Si deseas enviar un comentario, hazlo sin problema rellenando el siguiente formulario.</p>
 
         <form>
 
@@ -182,7 +178,7 @@
 
 
             <div class="form-group">
-                <label class="mb-2">Mensaje</label>
+                <label class="mb-2">Comentario</label>
                 <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
             </div>
 
@@ -199,7 +195,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Diego Ovalle 2024. Todos los derechos reservados.</p>
     </footer>
 
 
