se cambian imagenes e iconos

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
+                <i class="fas fa-robot"></i>
                 <h3 class="my-3 fw-bold">Armado de maquetas</h3>
                 <p class="my-3">
                     Siempre me han gustado el armado de maquetas aun cuando nunca fui demasiado bueno en artes plasticas en la escuela.
@@ -85,14 +85,14 @@
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
+                <i class="fas fa-tools"></i>
                 <h3 class="my-3 fw-bold">Desarrollo informatico</h3>
                 <p class="my-3">
                     Desde pequeño siempre me gusto el mundo informatico, en especial a las cosas que se podian llegar a crear.
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
+                <i class="fas fa-tv"></i>
                 <h3 class="my-3 fw-bold">Cine</h3>
                 <p class="my-3">
                     El cine es otro de mis gustos eternos, siempre disfrutando de todos los generos mientras tenga una historia bien contada.
@@ -104,12 +104,12 @@
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos en maquetas</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/strikenoir.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">GUNDAM STRIKE NOIR HG</h5>
                         <p class="card-text">
@@ -124,7 +124,7 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/millenium.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">MILLENIUM FALCOM HG</h5>
                         <p class="card-text">
@@ -139,7 +139,7 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/beargguyF.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">BEARGGUY F HG</h5>
                         <p class="card-text">
